Culminamos menu responsive con hover y transiciones

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <nav class="toolbar">
 
       <!--Asignamos logo-->
-      <div class="logo-nombre">
-        <a href="#"><img src="/assets/logo-sin-fondo.png" alt="logo" class="logo"></a>
+      <a href="#"><div class="logo-nombre">
+        <img src="/assets/logo-sin-fondo.png" alt="logo" class="logo">
         <h1>POSTRES MINARO</h1>
-      </div>
+      </div></a>
       <!--Colocamos icono de menu que desplegara el menu en responsive-->
       <label for="menu"><i class="fa-solid fa-bars"></i></label>  
       <input type="checkbox" id="menu">
