--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>POSTRES MINARO</title>
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="shortcut icon" href="/assets/logo-sin-fondo.png" type="image/x-icon">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="assets/logo-sin-fondo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
@@ -13,7 +13,7 @@
 
       <!--Asignamos logo-->
       <a href="#"><div class="logo-nombre">
-        <img src="/assets/logo-sin-fondo.png" alt="logo" class="logo">
+        <img src="assets/logo-sin-fondo.png" alt="logo" class="logo">
         <h1>POSTRES MINARO</h1>
       </div></a>
       <!--Colocamos icono de menu que desplegara el menu en responsive-->
