Agregamos la seccion del home del emprendimiento

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <!--Asignamos logo-->
       <a href="#"><div class="logo-nombre">
         <img src="assets/logo-sin-fondo.png" alt="logo" class="logo">
-        <h1>POSTRES MINARO</h1>
+        <h1 class="nombre-empresa">Postres Minaro</h1>
       </div></a>
       <!--Colocamos icono de menu que desplegara el menu en responsive-->
       <label for="menu"><i class="fa-solid fa-bars"></i></label>  
@@ -35,6 +35,13 @@
 
     <main class="hero">
       <div class="contenido-home">
+          <h1>Sabor Natural</h1>
+          <h5 class="text-home">Deliciosos postres para toda ocasion</h5>
+
+
+          <div class="seccion-videos">
+            <a href="#" class="conocelos"><i class="fa-solid fa-play"></i>Conócelos</a>
+          </div>
           
       </div>
       
