Modificacion tamaño fuente

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <main class="hero">
       <div class="contenido-home">
-          <h1>Sabor Natural</h1>
+          <h1 class="sabor-natural">Sabor Natural</h1>
           <h5 class="text-home">Deliciosos postres para toda ocasion</h5>
 
 
