--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>POSTRES MINARO</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="shortcut icon" href="/assets/logo-sin-fondo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -35,9 +35,10 @@
 
     <main class="hero">
       <div class="contenido-home">
+        <div class="informacion-home">
           <h1 class="sabor-natural">Sabor Natural</h1>
-          <h5 class="text-home">Deliciosos postres para toda ocasion</h5>
-
+          <h5 class="text-home delicious">Deliciosos postres para toda ocasion</h5>
+        </div>
 
           <div class="seccion-videos">
             <a href="#" class="conocelos"><i class="fa-solid fa-play"></i>Conócelos</a>
